--- a/styles.css
+++ b/styles.css
@@ -65,33 +65,45 @@ nav a {
 }
 
 
+.category-badge {
+  background-color: #e7fff1 !important;
+  color: #0ce466 !important;
+  border: 1px #0ce466 solid !important;
+}  
+
 .category-badge:hover {
-  border-color: crimson !important; 
-  color: white !important;
-  background-color: crimson !important;
   cursor: pointer !important;
+  background-color: #ffe7ec !important;
+  color: #e40c42 !important;
+  border-color: #e40c42 !important; 
 }
 
+/* 
+e7f1ff 
+0c63e4
+*/
+
+
 #confirmPosition:hover {
-  background-color: lightgreen;
-  color: white;
-  border-color: transparent;
+  background-color: #e7fff1;
+  color: #0ce466;
+  border-color: #0ce466; 
 }
 
 #addCategory:hover {
-  background-color: lightgreen;
-  color: white;
-  border-color: transparent;
+  background-color: #e7fff1;
+  color: #0ce466;
+  border-color: #0ce466; 
 }
 
 #addImage:hover {
-  background-color: lightgreen;
-  color: white;
-  border-color: transparent;
+  background-color: #e7fff1;
+  color: #0ce466;
+  border-color: #0ce466; 
 }
 
 .carousel-item>img {
- object-fit: cover; 
+  object-fit: cover; 
 }
 
 .addedImage {
@@ -99,11 +111,16 @@ nav a {
   margin-left: auto !important; 
   margin-right: auto !important;
   border-radius: 20px !important;
-  width: 50% !important;
+  width: 50% !important; 
   height: 50% !important; 
 }
 
 .removeImageBtn {
   margin-left: auto !important; 
   margin-right: auto !important;
+  background-color: #ffe7ec !important;
+  color: #e40c42 !important;
+  border-color: #e40c42 !important; 
 }
+
+
