--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Arvo&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Arvo&display=swap');
 body {
   margin: 0;
   font-family: "Arvo" !important;
@@ -13,6 +13,12 @@ header {
 
 nav a {
   color: #555 !important;
+}
+
+.card-text {
+  max-height: 75px; 
+  overflow: hidden;
+  text-overflow: ellipsis !important;
 }
 
 #main-container {
