adding set location functionality for adding locations from outside and compiling the webstite into a desktop app using electron js

--- a/styles.css
+++ b/styles.css
@@ -97,6 +97,12 @@ nav a {
   border-color: #0ce466; 
 }
 
+#setPosition:hover {
+  background-color: #e7fff1;
+  color: #0ce466;
+  border-color: #0ce466; 
+}
+
 #addCategory:hover {
   background-color: #e7fff1;
   color: #0ce466;
